--- a/src/PortfolioContainer/AboutMe/AboutMe.css
+++ b/src/PortfolioContainer/AboutMe/AboutMe.css
@@ -16,7 +16,7 @@
 }
 .about-me-profile {
   width: 50%;
-  background-image: url("../../assets/AboutMe/dilaksan.JPG");
+  background-image: url("https://cfm-list.s3.eu-west-3.amazonaws.com/dilaksan.JPG");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
