--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -59,7 +59,7 @@
   height: 92%;
   width: 92%;
   border-radius: 50%;
-  background-image: url("../../../assets/Home//dilaksan.jpeg");
+  background-image: url("https://cfm-list.s3.eu-west-3.amazonaws.com/dilaksan.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
